Parser/antlr4-skeletons/cpp/.antlr/C8086Parser.java
// Generated from /Users/mehedikhan/Academics/3-1/CSE310-Compiler/Parser/antlr4-skeletons/cpp/C8086Parser.g4 by ANTLR 4.13.1

    #include <iostream>
    #include <fstream>
    #include <string>
    #include <sstream>
    #include <cstdlib>
    #include "C8086Lexer.h"
    #include "SymbolTable.h"

	using namespace std;

    extern ofstream parserLogFile;
    extern ofstream errorFile;

    extern int syntaxErrorCount;

    extern SymbolTable symbol_table;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class C8086Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_COMMENT=1, BLOCK_COMMENT=2, STRING=3, WS=4, IF=5, ELSE=6, FOR=7, 
		WHILE=8, PRINTLN=9, RETURN=10, INT=11, FLOAT=12, VOID=13, LPAREN=14, RPAREN=15, 
		LCURL=16, RCURL=17, LTHIRD=18, RTHIRD=19, SEMICOLON=20, COMMA=21, ADDOP=22, 
		SUBOP=23, MULOP=24, INCOP=25, DECOP=26, NOT=27, RELOP=28, LOGICOP=29, 
		ASSIGNOP=30, ID=31, CONST_INT=32, CONST_FLOAT=33, ERROR_CHAR=34;
	public static final int
		RULE_start = 0, RULE_program = 1, RULE_unit = 2, RULE_func_declaration = 3, 
		RULE_func_definition = 4, RULE_parameter_list = 5, RULE_parameter_list_err = 6, 
		RULE_compound_statement = 7, RULE_var_declaration = 8, RULE_declaration_list_err = 9, 
		RULE_type_specifier = 10, RULE_declaration_list = 11, RULE_statements = 12, 
		RULE_statement = 13, RULE_expression_statement = 14, RULE_variable = 15, 
		RULE_expression = 16, RULE_logic_expression = 17, RULE_rel_expression = 18, 
		RULE_simple_expression = 19, RULE_simple_expression_err = 20, RULE_term = 21, 
		RULE_unary_expression = 22, RULE_factor = 23, RULE_argument_list = 24, 
		RULE_arguments = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "program", "unit", "func_declaration", "func_definition", "parameter_list", 
			"parameter_list_err", "compound_statement", "var_declaration", "declaration_list_err", 
			"type_specifier", "declaration_list", "statements", "statement", "expression_statement", 
			"variable", "expression", "logic_expression", "rel_expression", "simple_expression", 
			"simple_expression_err", "term", "unary_expression", "factor", "argument_list", 
			"arguments"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'if'", "'else'", "'for'", "'while'", null, 
			"'return'", "'int'", "'float'", "'void'", "'('", "')'", "'{'", "'}'", 
			"'['", "']'", "';'", "','", null, null, null, "'++'", "'--'", "'!'", 
			null, null, "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LINE_COMMENT", "BLOCK_COMMENT", "STRING", "WS", "IF", "ELSE", 
			"FOR", "WHILE", "PRINTLN", "RETURN", "INT", "FLOAT", "VOID", "LPAREN", 
			"RPAREN", "LCURL", "RCURL", "LTHIRD", "RTHIRD", "SEMICOLON", "COMMA", 
			"ADDOP", "SUBOP", "MULOP", "INCOP", "DECOP", "NOT", "RELOP", "LOGICOP", 
			"ASSIGNOP", "ID", "CONST_INT", "CONST_FLOAT", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "C8086Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    void writeIntoParserLogFile(const string message) {
	        if (!parserLogFile) {
	            cout << "Error opening parserLogFile.txt" << endl;
	            return;
	        }

	        parserLogFile << message << endl;
	        parserLogFile.flush();
	    }

	    void writeIntoErrorFile(const string message) {
	        if (!errorFile) {
	            cout << "Error opening errorFile.txt" << endl;
	            return;
	        }
	        errorFile << message << endl;
	        errorFile.flush();
	    }

	    bool isInteger(const string &str) {
	        for (char c : str) {
	            if (!isdigit(c)) {
	                return false;
	            }
	        }
	        return true;
	    }

	    int getParamCount(const string &str) {
	        int count = 0;
	        size_t pos = 0;
	        while ((pos = str.find(',', pos)) != string::npos) {
	            count++;
	            pos++;
	        }
	        return count + 1; // +1 for the last parameter
	    }

	    // from symbol table list. eg int a, int b
	    vector<string> getFuncArgsFromList(const string &str) {
	        vector<string> args;
	        stringstream ss(str);
	        string arg;

	        while (getline(ss, arg, ',')) { // Split by comma
	            // Trim leading spaces
	            arg.erase(0, arg.find_first_not_of(' '));
	            // Extract type (first word)
	            stringstream arg_ss(arg);
	            string type;
	            arg_ss >> type; // Get the first word (the type)
	            args.push_back(type);
	        }

	        return args;
	    }

	    // from arg list. eg func(a, b), when calling aarki.
	    vector<string> getFuncArgsFromCall(const string &str) {
	        // cut whitespaces from str
	        string trimmed_str = str;
	        trimmed_str.erase(remove(trimmed_str.begin(), trimmed_str.end(), ' '), trimmed_str.end());
	        vector<string> args;
	        size_t pos = 0;
	        while ((pos = trimmed_str.find(',')) != string::npos) {
	            args.push_back(trimmed_str.substr(0, pos));
	            trimmed_str.erase(0, pos + 1);
	        }
	        if (!trimmed_str.empty()) {
	            args.push_back(trimmed_str); // add the last argument
	        }
	        return args;
	    }

	    // foo4(c[1) -> we wanna return foo4 only.
	    string getFuncNameFromExpression(const string &expr) {
	        size_t pos = expr.find('(');
	        if (pos != string::npos) {
	            return expr.substr(0, pos); // Return the substring before the '('
	        }
	        return expr; // If no '(' found, return the whole expression
	    }

	    string current_type;
	    bool fp_and_no_lcurl_found = false; // keeps track of the first lcurl after a function parameter list
	    bool function_declaration_reading = false; // since we don't wanna store declaration's parameter list in the symbol table
	    bool return_type_mismatch = false;

	    string current_func_param_list = ""; // when we're reading a function definition which did not have a
	    // declaration, we store the current function's parameter list here to use it later to update the
	    // symbol table entry for the function, in its own scope. (since parameter list is in a child scope)
	    bool func_without_declaration = false;
	    string func_without_declaration_id = "";
	    bool skip_func_validation = false; // needed when a defined function was named as a variable earlier.

	    // cannot return from void function.
	    string current_func_id = "";
	    string error_text_1 = "";

	public C8086Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public ProgramContext program;
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			((StartContext)_localctx).program = program(0);

			        writeIntoParserLogFile("Line " + to_string((((StartContext)_localctx).program!=null?(((StartContext)_localctx).program.stop):null)->getLine()) + ": start : program\n");
			        symbol_table.printAllScopes();
			        writeIntoParserLogFile("Total number of lines: " + to_string((((StartContext)_localctx).program!=null?(((StartContext)_localctx).program.stop):null)->getLine()));
			        writeIntoParserLogFile("Total number of errors: " + to_string(syntaxErrorCount));
			        symbol_table.testPrint();
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public string text;
		public ProgramContext p;
		public UnitContext u;
		public UnitContext unit() {
			return getRuleContext(UnitContext.class,0);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		return program(0);
	}

	private ProgramContext program(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ProgramContext _localctx = new ProgramContext(_ctx, _parentState);
		ProgramContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_program, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(56);
			((ProgramContext)_localctx).u = unit();

			        ((ProgramContext)_localctx).text =  ((ProgramContext)_localctx).u.text;
			        writeIntoParserLogFile("Line " + to_string((((ProgramContext)_localctx).u!=null?(((ProgramContext)_localctx).u.stop):null)->getLine()) + ": program : unit\n");
			        writeIntoParserLogFile(_localctx.text + "\n");
			    
			}
			_ctx.stop = _input.LT(-1);
			setState(65);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ProgramContext(_parentctx, _parentState);
					_localctx.p = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_program);
					setState(59);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(60);
					((ProgramContext)_localctx).u = unit();

					                  ((ProgramContext)_localctx).text =  ((ProgramContext)_localctx).p.text + "\n" + ((ProgramContext)_localctx).u.text;
					                  writeIntoParserLogFile("Line " + to_string((((ProgramContext)_localctx).u!=null?(((ProgramContext)_localctx).u.stop):null)->getLine()) + ": program : program unit\n");
					                  writeIntoParserLogFile(_localctx.text + "\n");
					              
					}
					} 
				}
				setState(67);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnitContext extends ParserRuleContext {
		public string text;
		public Var_declarationContext vd;
		public Func_declarationContext fd;
		public Func_definitionContext fde;
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public Func_declarationContext func_declaration() {
			return getRuleContext(Func_declarationContext.class,0);
		}
		public Func_definitionContext func_definition() {
			return getRuleContext(Func_definitionContext.class,0);
		}
		public UnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unit; }
	}

	public final UnitContext unit() throws RecognitionException {
		UnitContext _localctx = new UnitContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_unit);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				((UnitContext)_localctx).vd = var_declaration();

						((UnitContext)_localctx).text =  ((UnitContext)_localctx).vd.text;
						writeIntoParserLogFile("Line " + to_string((((UnitContext)_localctx).vd!=null?(((UnitContext)_localctx).vd.stop):null)->getLine()) + ": unit : var_declaration\n");
						writeIntoParserLogFile(_localctx.text + "\n");

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				((UnitContext)_localctx).fd = func_declaration();

						((UnitContext)_localctx).text =  ((UnitContext)_localctx).fd.text;
						writeIntoParserLogFile("Line " + to_string((((UnitContext)_localctx).fd!=null?(((UnitContext)_localctx).fd.stop):null)->getLine()) + ": unit : func_declaration\n");
						writeIntoParserLogFile(_localctx.text + "\n");
					 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				((UnitContext)_localctx).fde = func_definition();

				        ((UnitContext)_localctx).text =  ((UnitContext)_localctx).fde.text;
				        writeIntoParserLogFile("Line " + to_string((((UnitContext)_localctx).fde!=null?(((UnitContext)_localctx).fde.stop):null)->getLine()) + ": unit : func_definition\n");
				        writeIntoParserLogFile(_localctx.text + "\n");
				     
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_declarationContext extends ParserRuleContext {
		public string text;
		public Type_specifierContext ts;
		public Token ID;
		public Parameter_listContext parameter_list;
		public TerminalNode ID() { return getToken(C8086Parser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(C8086Parser.LPAREN, 0); }
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(C8086Parser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(C8086Parser.SEMICOLON, 0); }
		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class,0);
		}
		public Func_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_declaration; }
	}

	public final Func_declarationContext func_declaration() throws RecognitionException {
		Func_declarationContext _localctx = new Func_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_func_declaration);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				((Func_declarationContext)_localctx).ts = type_specifier();
				setState(80);
				((Func_declarationContext)_localctx).ID = match(ID);
				setState(81);
				match(LPAREN);

				            function_declaration_reading = true;
				    
				setState(83);
				((Func_declarationContext)_localctx).parameter_list = parameter_list(0);
				setState(84);
				match(RPAREN);
				setState(85);
				match(SEMICOLON);

							((Func_declarationContext)_localctx).text =  ((Func_declarationContext)_localctx).ts.text + " " + ((Func_declarationContext)_localctx).ID->getText() + "(" + ((Func_declarationContext)_localctx).parameter_list.text + ");";
				            int param_count = getParamCount(((Func_declarationContext)_localctx).parameter_list.text);
				            if(symbol_table.insert(((Func_declarationContext)_localctx).ID->getText(), "ID", ((Func_declarationContext)_localctx).ts.text, ((Func_declarationContext)_localctx).ts.text, ((Func_declarationContext)_localctx).parameter_list.text, param_count) == false) {
				                string error_text = "Error at line " + to_string(((Func_declarationContext)_localctx).ID->getLine()) + ": Multiple declaration of " + ((Func_declarationContext)_localctx).ID->getText() + "\n";
				                writeIntoErrorFile(error_text);
				                writeIntoParserLogFile(error_text);
				                syntaxErrorCount++;
				            };
							writeIntoParserLogFile("Line " + to_string((((Func_declarationContext)_localctx).ts!=null?(((Func_declarationContext)_localctx).ts.start):null)->getLine()) + ": func_declaration : type_specifier ID LPAREN parameter_list RPAREN SEMICOLON\n");
							writeIntoParserLogFile(_localctx.text + "\n");
				            function_declaration_reading = false; 
						
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				((Func_declarationContext)_localctx).ts = type_specifier();
				setState(89);
				((Func_declarationContext)_localctx).ID = match(ID);
				setState(90);
				match(LPAREN);

				            function_declaration_reading = true;
				        
				setState(92);
				match(RPAREN);
				setState(93);
				match(SEMICOLON);

							((Func_declarationContext)_localctx).text =  ((Func_declarationContext)_localctx).ts.text + " " + ((Func_declarationContext)_localctx).ID->getText() + "();";
				            if(symbol_table.insert(((Func_declarationContext)_localctx).ID->getText(), "ID", ((Func_declarationContext)_localctx).ts.text, ((Func_declarationContext)_localctx).ts.text, "", 0) == false) {
				                string error_text = "Error at line " + to_string(((Func_declarationContext)_localctx).ID->getLine()) + ": Multiple declaration of " + ((Func_declarationContext)_localctx).ID->getText() + "\n";
				                writeIntoErrorFile(error_text);
				                writeIntoParserLogFile(error_text);
				                syntaxErrorCount++;
				            };
							writeIntoParserLogFile("Line " + to_string((((Func_declarationContext)_localctx).ts!=null?(((Func_declarationContext)_localctx).ts.start):null)->getLine()) + ": func_declaration : type_specifier ID LPAREN RPAREN SEMICOLON\n");
							writeIntoParserLogFile(_localctx.text + "\n");
				            function_declaration_reading = false;
						
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_definitionContext extends ParserRuleContext {
		public string text;
		public Type_specifierContext ts;
		public Token ID;
		public Parameter_listContext pl;
		public Compound_statementContext cs;
		public TerminalNode ID() { return getToken(C8086Parser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(C8086Parser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(C8086Parser.RPAREN, 0); }
		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class,0);
		}
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public Func_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_definition; }
	}

	public final Func_definitionContext func_definition() throws RecognitionException {
		Func_definitionContext _localctx = new Func_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_definition);
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				((Func_definitionContext)_localctx).ts = type_specifier();
				setState(99);
				((Func_definitionContext)_localctx).ID = match(ID);
				setState(100);
				match(LPAREN);

				            if(symbol_table.insert(((Func_definitionContext)_localctx).ID->getText(), "ID", ((Func_definitionContext)_localctx).ts.text, ((Func_definitionContext)_localctx).ts.text) == false) {
				                // string error_text = "Error at line " + to_string(((Func_definitionContext)_localctx).ID->getLine()) + ": Multiple declaration of " + ((Func_definitionContext)_localctx).ID->getText() + "\n";
				                // writeIntoErrorFile(error_text);
				                // writeIntoParserLogFile(error_text);
				                // syntaxErrorCount++;
				            } else {
				                // this function did not have a declaration.
				                func_without_declaration = true;
				                func_without_declaration_id = ((Func_definitionContext)_localctx).ID->getText();
				            }

				            // return type mismatch check
				            SymbolInfo *symbol = symbol_table.lookup(((Func_definitionContext)_localctx).ID->getText());
				            if(symbol != nullptr) {
				                string func_return_type = symbol->getFuncRetType();
				                cout << "Function return type: " << func_return_type << endl;
				                cout << "Expected return type: " << ((Func_definitionContext)_localctx).ts.text << endl;
				                if(func_return_type != ((Func_definitionContext)_localctx).ts.text) {
				                    return_type_mismatch = true;
				                }
				            }

				            symbol_table.enterScope();
				            fp_and_no_lcurl_found = true; 
				            current_func_id = ((Func_definitionContext)_localctx).ID->getText(); 
				        
				setState(102);
				((Func_definitionContext)_localctx).pl = parameter_list(0);

				            if(return_type_mismatch) {
				                string error_text = "";
				                SymbolInfo *symbol = symbol_table.lookup(((Func_definitionContext)_localctx).ID->getText());
				                if(symbol != nullptr) {
				                    if(symbol->getFuncRetType() == "") {
				                        // not a return type mismatch, rather redeclaration. since no ret type was found hence not a function.
				                        error_text = "Error at line " + to_string(((Func_definitionContext)_localctx).ID->getLine()) + ": Multiple declaration of " + ((Func_definitionContext)_localctx).ID->getText() + "\n";
				                        skip_func_validation = true;
				                    } else {
				                        error_text = "Error at line " + to_string(((Func_definitionContext)_localctx).ID->getLine()) + ": Return type mismatch of " + ((Func_definitionContext)_localctx).ID->getText() + "\n";
				                    }
				                }
				                writeIntoErrorFile(error_text);
				                writeIntoParserLogFile(error_text);
				                syntaxErrorCount++;
				                return_type_mismatch = false;
				            }
				            if(!func_without_declaration && !skip_func_validation) {
				                SymbolInfo *symbol2 = symbol_table.lookup(((Func_definitionContext)_localctx).ID->getText());
				                if(symbol2 != nullptr) {
				                    string actual_func_param_list = symbol2->getFuncArgs();
				                    if(actual_func_param_list != ((Func_definitionContext)_localctx).pl.text) {
				                        string error_text = "Error at line " + to_string(((Func_definitionContext)_localctx).ID->getLine()) + ": Total number of arguments mismatch with declaration in function " + ((Func_definitionContext)_localctx).ID->getText() + "\n";
				                        writeIntoErrorFile(error_text);
				                        writeIntoParserLogFile(error_text);
				                        syntaxErrorCount++;
				                    }
				                } 
				            }
				            current_func_param_list = ((Func_definitionContext)_localctx).pl.text;
				        
				setState(104);
				match(RPAREN);
				setState(105);
				((Func_definitionContext)_localctx).cs = compound_statement();

				            if(error_text_1 != "") {
				                writeIntoErrorFile("Error at line " + to_string((((Func_definitionContext)_localctx).cs!=null?(((Func_definitionContext)_localctx).cs.stop):null)->getLine()) + ": " + error_text_1);
				                writeIntoParserLogFile("Error at line " + to_string((((Func_definitionContext)_localctx).cs!=null?(((Func_definitionContext)_localctx).cs.stop):null)->getLine()) + ": " + error_text_1);
				                syntaxErrorCount++;
				                error_text_1 = "";
				            }
				            ((Func_definitionContext)_localctx).text =  ((Func_definitionContext)_localctx).ts.text + " " + ((Func_definitionContext)_localctx).ID->getText() + "(" + ((Func_definitionContext)_localctx).pl.text + ")" + ((Func_definitionContext)_localctx).cs.text;
				            writeIntoParserLogFile("Line " + to_string((((Func_definitionContext)_localctx).cs!=null?(((Func_definitionContext)_localctx).cs.stop):null)->getLine()) + ": func_definition : type_specifier ID LPAREN parameter_list RPAREN compound_statement\n");
				            writeIntoParserLogFile(_localctx.text + "\n");
				        
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				((Func_definitionContext)_localctx).ts = type_specifier();
				setState(109);
				((Func_definitionContext)_localctx).ID = match(ID);
				setState(110);
				match(LPAREN);

				            if(symbol_table.insert(((Func_definitionContext)_localctx).ID->getText(), "ID", ((Func_definitionContext)_localctx).ts.text, ((Func_definitionContext)_localctx).ts.text) == false) {
				                // string error_text = "Error at line " + to_string(((Func_definitionContext)_localctx).ID->getLine()) + ": Multiple declaration of " + ((Func_definitionContext)_localctx).ID->getText() + "\n";
				                // writeIntoErrorFile(error_text);
				                // writeIntoParserLogFile(error_text);
				                // syntaxErrorCount++;
				            };
